# student/studentRouter.js
@@ -9,5 +9,8 @@ router.get('/all', StudentController.getAllStudents);
 router.post('/update/:id', StudentController.updateStudent);
 router.post('/delete/:id', StudentController.deleteStudent);
 router.get('/:id', StudentController.getStudent);
+router.get('/deactivate/:id', StudentController.deactivateStudent);
+router.get('/reactivate/:id', StudentController.reactivateStudent);
+
 
 module.exports = router;
