# swagger-dev.yaml
@@ -24,6 +24,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -37,8 +38,6 @@ paths:
     options:
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -50,6 +49,7 @@ paths:
             Access-Control-Allow-Headers:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -63,8 +63,6 @@ paths:
         type: "mock"
   /class/all:
     get:
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -72,6 +70,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -85,8 +84,6 @@ paths:
     options:
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -98,6 +95,7 @@ paths:
             Access-Control-Allow-Headers:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -111,8 +109,6 @@ paths:
         type: "mock"
   /class/create:
     post:
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -120,6 +116,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -133,8 +130,6 @@ paths:
     options:
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -146,6 +141,7 @@ paths:
             Access-Control-Allow-Headers:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -159,8 +155,6 @@ paths:
         type: "mock"
   /class/delete/{ClassId}:
     post:
-      produces:
-      - "application/json"
       parameters:
       - name: "ClassId"
         in: "path"
@@ -173,6 +167,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -186,8 +181,6 @@ paths:
     options:
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -199,6 +192,7 @@ paths:
             Access-Control-Allow-Headers:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -212,8 +206,6 @@ paths:
         type: "mock"
   /class/removefromclass/{ClassId}:
     post:
-      produces:
-      - "application/json"
       parameters:
       - name: "ClassId"
         in: "path"
@@ -226,6 +218,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -239,8 +232,6 @@ paths:
     options:
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -252,59 +243,7 @@ paths:
             Access-Control-Allow-Headers:
               type: "string"
       x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: "200"
-            responseParameters:
-              method.response.header.Access-Control-Allow-Methods: "'POST,OPTIONS'"
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-        requestTemplates:
-          application/json: "{\"statusCode\": 200}"
-        passthroughBehavior: "when_no_match"
-        type: "mock"
-  /student/addtoclass/{StudentHbId}:
-    post:
-      produces:
-      - "application/json"
-      parameters:
-      - name: "StudentHbId"
-        in: "path"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "200 response"
-          headers:
-            Access-Control-Allow-Origin:
-              type: "string"
-      x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: "200"
-            responseParameters:
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-        uri: "arn:aws:apigateway:ap-southeast-2:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-2:845320091708:function:hapkidoApi/invocations"
-        passthroughBehavior: "when_no_match"
-        httpMethod: "POST"
-        contentHandling: "CONVERT_TO_TEXT"
-        type: "aws_proxy"
-    options:
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      responses:
-        200:
-          description: "200 response"
-          headers:
-            Access-Control-Allow-Origin:
-              type: "string"
-            Access-Control-Allow-Methods:
-              type: "string"
-            Access-Control-Allow-Headers:
-              type: "string"
-      x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -319,8 +258,6 @@ paths:
   /student/all:
     get:
       operationId: "getAllStudent"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -328,6 +265,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -341,8 +279,6 @@ paths:
     options:
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -354,6 +290,7 @@ paths:
             Access-Control-Allow-Headers:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -367,8 +304,59 @@ paths:
         type: "mock"
   /student/create:
     post:
+      responses:
+        200:
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+      x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        uri: "arn:aws:apigateway:ap-southeast-2:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-2:845320091708:function:hapkidoApi/invocations"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+        type: "aws_proxy"
+    options:
+      consumes:
+      - "application/json"
+      responses:
+        200:
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Headers:
+              type: "string"
+      x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'POST,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        passthroughBehavior: "when_no_match"
+        type: "mock"
+  /student/deactivate/{StudentHbId}:
+    post:
       produces:
       - "application/json"
+      parameters:
+      - name: "StudentHbId"
+        in: "path"
+        required: true
+        type: "string"
       responses:
         200:
           description: "200 response"
@@ -415,8 +403,6 @@ paths:
         type: "mock"
   /student/delete/{StudentHbId}:
     post:
-      produces:
-      - "application/json"
       parameters:
       - name: "StudentHbId"
         in: "path"
@@ -429,6 +415,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -442,8 +429,6 @@ paths:
     options:
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -455,6 +440,7 @@ paths:
             Access-Control-Allow-Headers:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -466,7 +452,7 @@ paths:
           application/json: "{\"statusCode\": 200}"
         passthroughBehavior: "when_no_match"
         type: "mock"
-  /student/removefromclass/{StudentHbId}:
+  /student/reactivate/{StudentHbId}:
     post:
       produces:
       - "application/json"
@@ -521,8 +507,6 @@ paths:
         type: "mock"
   /student/update/{StudentHbId}:
     post:
-      produces:
-      - "application/json"
       parameters:
       - name: "StudentHbId"
         in: "path"
@@ -535,6 +519,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -548,8 +533,6 @@ paths:
     options:
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -561,6 +544,7 @@ paths:
             Access-Control-Allow-Headers:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -591,6 +575,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -604,8 +589,6 @@ paths:
     options:
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       responses:
         200:
           description: "200 response"
@@ -613,6 +596,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
+        credentials: "arn:aws:iam::845320091708:role/lambda_basic_execution"
         responses:
           default:
             statusCode: "200"
@@ -649,13 +633,13 @@ definitions:
       feedback:
         type: "array"
 x-amazon-apigateway-gateway-responses:
-  DEFAULT_4XX:
-    responseParameters:
-      gatewayresponse.header.Access-Control-Allow-Methods: "'POST,OPTIONS'"
-      gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
-      gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
   DEFAULT_5XX:
     responseParameters:
       gatewayresponse.header.Access-Control-Allow-Methods: "'POST,OPTIONS'"
-      gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
       gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+      gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+  DEFAULT_4XX:
+    responseParameters:
+      gatewayresponse.header.Access-Control-Allow-Methods: "'POST,OPTIONS'"
+      gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+      gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
